@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<addon id="script.module.m7lib" name="m7lib" provider-name="mhancoc7" version="0.8.3">
+<addon id="script.module.m7lib" name="m7lib" provider-name="mhancoc7" version="0.8.4">
     <requires>
         <import addon="xbmc.python" version="2.20.0" />
         <import addon="plugin.video.youtube" version="5.5.1" />
